--- a/style.css
+++ b/style.css
@@ -1,51 +1,106 @@
 * {
-    box-sizing: border-box;
+  box-sizing: border-box;
 }
 body {
-    margin: 0;
-    min-height: 100vh;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    background: linear-gradient(to right, #ada996, #f2f2f2, #dbdbdb, #eaeaea); 
+  margin: 0;
+  min-height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background: linear-gradient(to right, #ada996, #f2f2f2, #dbdbdb, #eaeaea);
 }
 
 .calculator {
-    background: white;
-    width: 400px;
-    border-radius: 12px;
-    box-shadow: 0 5px 30px -5px rgba(0, 0, 0, 0.6);
+  background: white;
+  width: 400px;
+  border-radius: 12px;
+  box-shadow: 0 5px 30px -5px rgba(0, 0, 0, 0.6);
 }
 /* Display */
 .calculator-display {
-    background: black;
-    color: white;
-    margin: 0;
-    display: flex;
-    align-items: center;
-    justify-content: flex-end;
-    border-radius: 10px 10px 0 0;
+  background: black;
+  color: white;
+  margin: 0;
+  display: flex;
+  align-items: center;
+  justify-content: flex-end;
+  border-radius: 10px 10px 0 0;
 }
 
 .calculator-display h1 {
-    margin: 0;
-    padding: 25px;
-    font-size: 45px;
-    font-family: 'Lucida Console', sans-serif;
-    font-weight: 100;
-    overflow-x: auto;
+  margin: 0;
+  padding: 25px;
+  font-size: 45px;
+  font-family: "Lucida Console", sans-serif;
+  font-weight: 100;
+  overflow-x: auto;
 }
 /* custom scroll bar */
 
 ::-webkit-scrollbar {
-    width: 10px;
+  width: 10px;
 }
 ::-webkit-scrollbar-track {
-    background: #f1f1f1;
+  background: #f1f1f1;
 }
 ::-webkit-scrollbar-thumb {
-    background: #888;
+  background: #888;
 }
 ::-webkit-scrollbar-thumb:hover {
-    background: #555;
+  background: #555;
+}
+
+/* buttons */
+
+.calculator-buttons {
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  grid-gap: 10px;
+  padding: 10px;
+}
+
+button {
+  min-height: 50px;
+  font-size: 20px;
+  font-weight: 100;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+  background: rgb(209, 207, 207);
+}
+
+button:hover {
+  filter: brightness(110%);
+}
+
+button:active {
+    transform: translateY(1px);
+}
+button:focus {
+    outline: none;
+}
+
+.operator {
+  background: goldenrod;
+  color: white;
+  font-size: 30px;
+}
+.clear {
+  background: red;
+  color: white;
+}
+.clear:hover {
+  filter: brightness(90%);
+}
+.equal-sign {
+  grid-column: -2;
+  grid-row: 2 / span 4;
+}
+
+/* Media Query: Large SmartPhome */
+
+@media screen and (max-width: 600px) {
+    .calculator {
+        width: 90%;
+    }
 }
